--- a/sliderStyle.css
+++ b/sliderStyle.css
@@ -2,17 +2,23 @@
     margin-top: 5rem;
     max-width: 500px;
 }
-.slider-area {
-    padding: 12px;
+
+.slider {
+    transform: translateX(-90%);
+}
+.slider:hover {
+    transform: translateX(0)
 }
 
 .slider {
+    background-color: rgba(3, 125, 165, 0.726);
     border: 1px solid black;
     border-radius: 4px;
     padding-bottom: 14px;
     padding-top: 14px;
     padding-left: 14px;
     display: flex;
+    box-shadow: 8px 8px 12px rgba(100, 100, 100, .8)
 }
 
 .img-one {
@@ -28,8 +34,9 @@
 
 .text-area-one {
     display: flex;
+    justify-content: center;
 }
 
 .page-color {
-    background-color: #00295b42;
+    background-color: rgba(201, 201, 201, 0.555);
 }
