--- a/sliderStyle.css
+++ b/sliderStyle.css
@@ -11,13 +11,13 @@
     padding-left: 14px;
     display: flex;
     box-shadow: 8px 8px 12px rgba(100, 100, 100, 0.8);
-    transition: transform 0.5s ease-out;
+    transition: transform 0.7s ease-out;
 }
 
-.sliderOut {
-  transform: translateX(-110%);
+ .sliderOut {
+  transform: translateX(-110%); 
   
-}
+ }
 /* .slider:hover {
   transform: translateX(-110%);
 } */
@@ -50,9 +50,8 @@
 }
 
 .slidIn-btn-area {
-    margin-top: 15px;
     position: relative;
-    bottom: 310px;
+    top: 75px;
 }
 .sliding-btn {
     background-color: rgba(3, 125, 165, 0.726);
@@ -60,4 +59,13 @@
     border-radius: 2px;
     padding: 6px;
     color: white;
+}
+#insertName{
+  position: relative;
+  top: 55px;
+}
+.name {
+  border: 1px solid gray;
+  border-radius: 2px;
+  padding: 4px;
 }
