--- a/sliderStyle.css
+++ b/sliderStyle.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 5rem;
+  margin-top: 24px;
   max-width: 500px;
 }
 .card {
@@ -18,9 +18,7 @@
   transform: translateX(-110%); 
   
  }
-/* .slider:hover {
-  transform: translateX(-110%);
-} */
+
 
 
 .img-one {
@@ -50,8 +48,10 @@
 }
 
 .slidIn-btn-area {
+  /* display: flex;
+  justify-content: center; */
     position: relative;
-    top: 75px;
+    bottom: 250px;
 }
 .sliding-btn {
     background-color: rgba(3, 125, 165, 0.726);
@@ -59,6 +59,10 @@
     border-radius: 2px;
     padding: 6px;
     color: white;
+}
+.sliding-btn:hover {
+  background-color: green;
+  box-shadow: 0 0 20px gold !important;
 }
 #insertName{
   position: relative;
@@ -73,9 +77,60 @@
   margin-top: 6px;
 }
 
+
 #tdBar {
   width: 135px;
 }
+
+#tdBar:focus {
+  outline: none !important;
+  border-color: rgb(20, 20, 92) !important;
+  box-shadow: 0 0 10px rgb(20, 20, 92) !important;
+}
+
 #intBar {
   width: 135px;
 }
+
+#intBar:focus {
+  outline: none !important;
+  border-color: blue !important;
+  box-shadow: 0 0 10px blue !important;
+}
+#yrdBar {
+  width: 180px;
+}
+
+#yrdBar:focus {
+  outline: none !important;
+  border-color: blue !important;
+  box-shadow: 0 0 10px blue !important;
+}
+
+#rateBar{
+  width: 175px;
+}
+#rateBar:focus {
+  outline: none !important;
+  border-color: blue !important;
+  box-shadow: 0 0 10px blue !important;
+}
+.nameInput {
+  position: relative;
+  top: 12px;
+  bottom: 32px;
+}
+#imgBar:focus{
+  outline: none !important;
+  border-color: blue !important;
+  box-shadow: 0 0 10px blue !important;
+}
+#imgBar {
+  width: 130px;
+}
+#nameBar:focus{
+  outline: none !important;
+  border-color: blue !important;
+  box-shadow: 0 0 10px blue !important;
+}
+
